syntax = "proto3";
package user;
option go_package = "./pb";

message UserSubject{
    int64 id=1;
    string username=2;
    string password=3;
    string nickname=4;
    string email=5;
    string phone=6;
    string last_ip=7;
    int32 vip=8;
    int32 follower=9;
    int32 state=10;
    string create_time=11;
    string update_time=12;
}

message UserCollection{
    int64 id=1;
    int64 user_id=2;
    int32 collect_type=3;
    int32 obj_type=4;
    int64 obj_id=5;
    string create_time=6;
    string update_time=7;
}